@startuml

class Clock {
  - currentTime: Date
  - mode: Mode
  + constructor()
  + getCurrentTime(): Date
  + incrementHour(): void
  + incrementMinute(): void
  + getMode(): Mode
  + setMode(mode: Mode): void
  + tick(): void
}

enum Mode {
  DISPLAY
  EDIT_HOUR
  EDIT_MINUTE
}

class ClockView {
  - timeDisplay: HTMLElement
  - lightOn: boolean
  + constructor()
  + render(clock: Clock): void
  + updateTimeDisplay(time: Date): void
  + toggleLight(on: boolean, time: Date): void
}

class ClockController {
  - clock: Clock
  - view: ClockView
  + constructor(clock: Clock, view: ClockView)
  + initialize(): void
  + startClock(): void
  + changeMode(): void
  + increase(): void
  + toggleLight(): void
}

ClockController --> Clock
ClockController --> ClockView
ClockView --> Clock
Clock --> Mode

@enduml